--- a/app/views/submission_replies/edit.html.erb
+++ b/app/views/submission_replies/edit.html.erb
@@ -13,7 +13,7 @@
 
   <h3>Edit</h3>
 
-  <%= simple_form_for @submission_reply, url: submission_submission_reply_path(params[:submission_id], params[:id]), method: :patch, input_html: {class: 'form-horizontal'} do |f|  %>
+  <%= simple_form_for current_submission_reply, url: submission_submission_reply_path(params[:submission_id], params[:id]), method: :patch, input_html: {class: 'form-horizontal'} do |f|  %>
     <div data-no-turbolink>
       <%= f.input :content, as: :summernote, label: 'Comment', required: true %>
     </div>
