--- a/app/assets/stylesheets/hints.scss
+++ b/app/assets/stylesheets/hints.scss
@@ -98,6 +98,10 @@
   @include hint-buttons;
 }
 
+#btn-all-hints {
+  @include hint-buttons; 
+}
+
 
 .hint-activated {
   background-color: #d9edf7;
