--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -7,20 +7,10 @@
   <span class="step-number">1</span> Choose a Program
 </div>
 
-<%= render partial: 'program', locals: { sub_title: "Online Remote Training | 8 Weeks", title: "TECHRISE Core Remote", 
-        description: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+<%= render partial: 'program', locals: { sub_title: "Online | Part time | 1 month | 3,000NRP", title: "TECHRISE Core Remote", 
+        description: "Want to code from anywhere at anytime? Learn at your own pace remotely through our complete online course. Our one month package includes weekly Skype mentor sessions and access to the online forum where you can ask questions any time.",
         detail_link: "", apply_link: apply_remote_path } %>
 
-<%= render partial: 'program', locals: { sub_title: "Onsite Immersive Training | 8 Weeks", title: "TECHRISE Core Immersive", 
-        description: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+<%= render partial: 'program', locals: { sub_title: "On Campus | Immersive | 8 weeks  - 15,000NRP", title: "TECHRISE Core Immersive", 
+        description: "Learn to become a web developer through our immersive 8 week program. Have the full experience of working with a personal mentor twice a week, and attending extra workshops every other week to boost up your skills for your career. Our innovative platform combines an online curriculum and a strong community that is always there to help accelerate your path to becoming a professional web developer.",
         detail_link: "", apply_link: "" } %>
