--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -18,15 +18,15 @@
                     <div class="item-inner">
                         <div class="heading">
                         <h3 class="title">TECHRISE CORE PROGRAM<br><small>Includes training on Ruby, Ruby on Rails, RSpec, Test Driven Development, HTML/CSS, Bootstrap, JavaScript, Git/Github, Heroku and more</small></h3>
-                        <p class="price-figure"><span class="price-figure-inner"><span class="currency"></span><span class="number">15,000</span> <strike>20,000</strike> (limited time offer)<br /><span class="unit">NPR</span></span></p>
+                        <p class="price-figure"><span class="price-figure-inner"><span class="currency"></span><span class="number">12,000</span> <strike>15,000</strike> (limited time offer)<br /><span class="unit">NPR</span></span></p>
                         </div>
                         <div class="content">
                             <ul class="list-unstyled feature-list">
                                 <li><i class="fa fa-check"></i>Learn Ruby, Ruby on Rails, RSpec, Test Driven Development, HTML/CSS, Bootstrap, JavaScript, Git/Github, Heroku and more (all courses included)</li>
                                 <li><i class="fa fa-check"></i>Build Multiple Real-World Applications including an Instagram Clone</li>
                                 <li><i class="fa fa-check"></i>Solve real difficult interview problems</li>
-                                <li><i class="fa fa-check"></i>2 Months of Intensive Training</li>
-                                <li><i class="fa fa-check"></i>Weekly 1 on 1 Mentor Sessions</li>
+                                <li><i class="fa fa-check"></i>8 Weeks of Intensive Training</li>
+                                <li><i class="fa fa-check"></i>16 personal 1 on 1 Mentor Sessions</li>
                                 <li><i class="fa fa-check"></i>Daily Office Hours</li>                                
                                 <li><i class="fa fa-check"></i>Online Support</li>                                
                                 <li><i class="fa fa-check"></i>Lifetime Access to Course Material</li>
@@ -71,7 +71,7 @@
         
                     <div class="panel-collapse collapse" id="faq2">
                         <div class="panel-body">
-                            The program is two months long.
+                            The program is 8 weeks long.
                         </div>
                     </div>
                 </div><!--//panel-->
