--- a/app/views/static_pages/_details.html.erb
+++ b/app/views/static_pages/_details.html.erb
@@ -4,19 +4,19 @@
             <tr>
                 <td><strong>Course Contents</strong></td>
                 <td>
-                    Learn Ruby, Ruby on Rails, RSpec, Test Driven Development, HTML/CSS, Bootstrap, JavaScript, Git/Github, Heroku and more essential web development skills by building real-world web applications (<strong>all courses included in 15,000 NPR <strike>20,000</strike> package</strong>). You will have <strong>2 months of intensive training with a personal 1-on-1 mentor</strong>, including problem solving training with real coding interview questions. <a href="/curriculum">Take a look at the TECHRISE curriculum.</a>
+                    Learn Ruby, Ruby on Rails, RSpec, Test Driven Development, HTML/CSS, Bootstrap, JavaScript, Git/Github, Heroku and more essential web development skills by building real-world web applications (<strong>all courses included in 12,000 NPR <strike>15,000</strike> package</strong>). You will have <strong>8 weeks of intensive training with 16 personal 1-on-1 mentor sessions</strong>, including problem solving training with real coding interview questions. <a href="/curriculum">Take a look at the TECHRISE curriculum.</a>
                 </td>
             </tr>
             <tr>
                 <td><strong>Price</strong></td>
                 <td>    
-                    <strong>15,000 NPR</strong> <strike>20,000</strike> <strong>for 2 months of intensive training (limited time offer).</strong> You will learn Ruby, Ruby on Rails, RSpec, Test Driven Development, Git, Heroku,  HTML/CSS, Bootstrap, and JavaScript and <strong>build multiple real-world applications with a 1-on-1 personal mentor.</strong> (Everything included in the 15,000 NPR package.) Read more <%= link_to 'here', pricing_path %>.
+                    <strong>12,000 NPR</strong> <strike>15,000</strike> <strong>for 8 weeks of intensive training (limited time offer).</strong> You will learn Ruby, Ruby on Rails, RSpec, Test Driven Development, Git, Heroku,  HTML/CSS, Bootstrap, and JavaScript and <strong>build multiple real-world applications with a 1-on-1 personal mentor.</strong> (Everything included in the 12,000 NPR package.) Read more <%= link_to 'here', pricing_path %>.
                 </td>
             </tr>   
             <tr>
                 <td><strong>Duration</strong></td>
                 <td>
-                    The entire course will take 2 months. We expect all students to put in atleast 15 hours a week for learning and coding.
+                    The entire course will take 8 weeks. We expect all students to put in atleast 15 hours a week for learning and coding.
                 </td>
             </tr>       
             <tr>
