--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -70,7 +70,7 @@
       </div><!-- panel -->
     <% end %>
 
-    <% if current_user.prework_start_time.nil? && !current_user.admitted && !current_user.admin && !current_user.mentor %>
+    <% if !current_user.has_started_prework? && !current_user.has_access? %>
       <div class="panel">
         <div class="panel-heading-stats">
           <h3><i class="fa fa-bar-chart" aria-hidden="true"></i> Start Your 4 Day Prework Period</h3>
