--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -139,7 +139,7 @@
                 </li>
 
                 <% unless user_signed_in? %>
-                    <li class="nav-item nav-item-cta last"><%= link_to 'APPLY', new_user_registration_path, class: 'btn btn-cta btn-cta-secondary' %></li>
+                    <li class="nav-item nav-item-cta last"><%= link_to 'APPLY', apply_path, class: 'btn btn-cta btn-cta-secondary' %></li>
                 <% end %>
 
             </ul><!--//nav-->
