--- a/app/assets/stylesheets/apply.scss
+++ b/app/assets/stylesheets/apply.scss
@@ -110,7 +110,7 @@
   .actions {
     width: 200px;
   }
-  input {
+  input, textarea {
     background: whitesmoke;
     border-radius: 0px;
     margin-bottom: 20px;
