--- a/app/views/layouts/apply.html.erb
+++ b/app/views/layouts/apply.html.erb
@@ -15,7 +15,7 @@
     <div class="container">    
       <div class="apply-content-wrapper">
         <%= yield %>      
-      </div><!-- apply-content-wrapper -->
+      </div>
     </div><!-- container -->
   </div><!-- row -->
 </div><!-- apply-wrapper -->
