--- a/app/views/static_pages/immersive.html.erb
+++ b/app/views/static_pages/immersive.html.erb
@@ -103,6 +103,12 @@
       <h4>
         Build a complete mock of the popular Instagram application.
       </h4>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+          <%= image_tag 'details/instapost.jpg', class: 'screenshot img-responsive' %>
+        </div>
+      </div>
     </div>
 
     <div class="phase">
@@ -111,6 +117,12 @@
       <h4>
         Learn Test Driven Development (TDD) and learn to build tested, quality applications.
       </h4> 
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+          <%= image_tag 'details/rspec.jpg', class: 'screenshot img-responsive' %>
+        </div>
+      </div>
     </div> 
   </div>
 </section>
@@ -168,6 +180,38 @@
     </div>  
 
   </div>
+</section>
+
+<section class="payment">
+  <div class="container">
+    <h1>Tuition Fees</h1>
+    <div class="payment-details">
+      <div class="payment-price">12,000 NPR</div>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <h4>1 on 1 Mentorship</h4>
+          <p>
+            Accelerate your learning with 16 personal mentor sessions. Having a personal mentor is the fastest way to learning quickly.
+          </p>
+        </div>
+
+        <div class="col-xs-12 col-md-4">
+          <h4>Project Based Learning</h4>
+          <p>
+            Build real web applications to build practical skills and build a portfolio.
+          </p>
+        </div>
+
+        <div class="col-xs-12 col-md-4">
+          <h4>Ask Questions Anytime</h4>
+          <p>
+            Clarify any questions you might have by asking them at anytime. TECHRISE mentors will try to respond as quickly as possible.
+          </p>
+        </div>
+      </div><!-- row -->
+    </div><!-- payment-details -->
+  </div><!-- container -->
 </section>
 
 
