final commit before i sleep

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  *= require jquery-ui
  *= require RRSSB
+ *= require bootstrap-social
  *= require_self
  *= require_tree .
  *= stub "foundation"
