--- a/app/assets/stylesheets/apply.scss
+++ b/app/assets/stylesheets/apply.scss
@@ -116,3 +116,11 @@
     margin-bottom: 20px;
   }
 }
+
+.social-login {
+  margin: 30px 0px;
+}
+
+.social-login-button {
+  margin-bottom: 30px;
+}
