--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,7 @@
+.btn-social:hover {
+  color: white !important;
+}
+
 tr {
   font-size: 16px;
   font-family: 'Lato', sans-serif;
@@ -13,11 +17,11 @@ tr {
 }
 
 
-.btn-facebook {
-  background: #3b5998;
-  border: 2px solid #3b5998;
-  color: #fff;
-}
+// .btn-facebook {
+//   background: #3b5998;
+//   border: 2px solid #3b5998;
+//   color: #fff;
+// }
 
 .techrise_list {
   list-style-type: none;
