--- a/app/views/apply/remote.html.erb
+++ b/app/views/apply/remote.html.erb
@@ -2,74 +2,4 @@
   <h1>Enroll in TECHRISE Remote</h1>
 </div>
 
-<div class="step-container">
-  <span class="step-number">2</span> Enter Your Information
-</div>
-
-<% unless session["devise.user_attributes"] %>
-  
-  <%= link_to "Github", user_github_omniauth_authorize_path(remote: true) %>
-
-<% else %>
-
-  <div class="application-form">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-
-      <div class="row">
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :first_name %><br />
-          <%= f.text_field :first_name, autofocus: true, required: true, class: 'form-control', placeholder: 'First Name' %>
-        </div>
-
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :last_name %><br />
-          <%= f.text_field :last_name, autofocus: true, required: true, class: 'form-control', placeholder: 'Last Name' %>
-        </div>
-
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, required: true, class: 'form-control', placeholder: 'Your email' %>
-        </div>
-
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :mobile_number %><br />
-          <%= f.number_field :mobile_number, required: true, class: 'form-control', placeholder: 'Your Mobile Number' %>
-        </div>
-
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :facebook_handle %><br />
-          <%= f.text_field :facebook_handle, autocomplete: "off", class: 'form-control', placeholder: 'john.smith' %>
-        </div>
-
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", required: true, class: 'form-control', placeholder: 'Your password' %>
-        </div>
-
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: 'Confirm your password'  %>
-        </div>
-
-        <div class="col-xs-12">
-          <%= f.label "Reasons for Applying" %><br />
-          <%= f.text_area :application_reasons, class: 'form-control', placeholder: 'Please tell us about why you want to join TECHRISE and what you want to accomplish.', rows: "5" %>
-        </div>
-      </div>
-
-      <%= f.hidden_field :package, value: 0 %>
-
-      <br>
-
-      <div class="row">
-        <div class="col-xs-12 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
-          <%= f.submit "Complete Your Application", class: 'btn btn-block btn-cta-primary', data: { disable_with: "Submitting application..." }, style: 'background: #ec6952;' %>
-        </div>
-      </div>
-    <% end %>
-  </div>
-<% end %>
+<%= render partial: 'application_form', locals: {package: {remote: true}} %>
