--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -92,20 +92,19 @@
                     </li><!--//dropdown-->
 
 
-                <% else %>
+                <% else %>                    
+
+                    <li class="nav-item page-scroll">
+                      <a href="/immersive">Immersive</a>
+                    </li>
+                    
+                    <li class="nav-item page-scroll">
+                      <a href="/remote">Remote</a>
+                    </li>
 
                     <li class="nav-item page-scroll">
                       <a href="/curriculum">Curriculum</a>
                     </li>
-
-                    <li class="nav-item page-scroll">
-                      <a href="/learn">Learn More</a>
-                    </li>
-                    
-                    <li class="nav-item page-scroll">
-                      <a href="/pricing">Pricing</a>
-                    </li>
-
 
                     <li class="nav-item page-scroll">
                       <a href="/blog">Blog</a>
