--- a/app/views/apply/remote.html.erb
+++ b/app/views/apply/remote.html.erb
@@ -2,4 +2,4 @@
   <h1>Enroll in TECHRISE Remote</h1>
 </div>
 
-<%= render partial: 'application_form', locals: {package: {remote: true}} %>
+<%= render partial: 'application_form', locals: {package: {remote: true}, package_enum: :remote} %>
