--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -11,7 +11,7 @@
           Learn at your own pace remotely through our complete online course.
         </p>  
 
-        <span class="highlight-checkbox">1 Personal Mentor Sessions per week via Skype</span>
+        <span class="highlight-checkbox">1 Personal Mentor Session per week via Skype</span>
         <span class="highlight-checkbox">Learn Full Stack Web Development by Building Real Applications</span>
         <span class="highlight-checkbox">Ask questions and interact with community members</span>
 
@@ -132,6 +132,18 @@
 
     <div class="row">
       <div class="col-md-4">
+        <%= image_tag 'details/physics.png' %>
+      </div>
+      <div class="col-md-8">
+        <h3>Learn at your own time, at your own pace</h3>
+        <p>
+          Our online platform enables you to study and learn anytime and anywhere you want. Get the quality learning experience without ever having to step outside your home.
+        </p>
+      </div>
+    </div>  
+
+    <div class="row">
+      <div class="col-md-4">
         <%= image_tag 'details/video-chat.png' %>
       </div>
       <div class="col-md-8">
@@ -164,19 +176,7 @@
           You have access to the online forum and Slack channel where you can ask questions anytime. Within our office hours, you will get an almost instant response. Get your questions answered and learn quickly!
         </p>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <%= image_tag 'details/physics.png' %>
-      </div>
-      <div class="col-md-8">
-        <h3>Learn at your own time, at your own pace</h3>
-        <p>
-          Our online platform enables you to study and learn anytime and anywhere you want. Get the quality learning experience without ever having to step outside your home.
-        </p>
-      </div>
-    </div>  
+    </div>    
 
   </div>
 </section>
@@ -210,7 +210,7 @@
         </div>
 
         <div class="col-xs-12">
-          <small>* You can also extend your course at an additional 2,500 NPR per month.</small>
+          <p><small>* You can also extend your course at an additional 2,500 NPR per month.</small></p>
         </div>
       </div><!-- row -->
     </div><!-- payment-details -->
