--- a/app/views/apply/immersive.html.erb
+++ b/app/views/apply/immersive.html.erb
@@ -2,4 +2,4 @@
   <h1>Enroll in TECHRISE Immersive</h1>
 </div>
 
-<%= render partial: 'application_form', locals: {package: {immersive: true}, package_enum: :immersive} %>
+<%= render partial: 'application_form', locals: {package: {immersive: true}, form_url: immersive_applicants_path} %>
