--- a/app/views/ruby_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_4.html.erb
@@ -25,16 +25,16 @@
   </p>
 
   <pre><code class="bash">
-cd ~/Downloads/hello
-  </code></pre>
+cd ~/Downloads/hello</code></pre>
 
-  <p>Once you are in the folder, run the rspec command.</p>
+  <p>Once you are in the folder, run the bundle install command. It will install all the required gems.</p>
 
-  <pre>
-    <code class="bash">
-rspec
-    </code>
+  <pre><code class="bash">
+bundle install</code>
   </pre>
+
+  <pre><code class="bash">
+rspec</code></pre>
 
   <p>
     This will run some tests to see if the code is working or not. Since you haven't written any code yet, you should see the failing tests.
