--- a/app/views/apply/_application_form.html.erb
+++ b/app/views/apply/_application_form.html.erb
@@ -33,7 +33,7 @@
 <% else %>
 
   <div class="application-form">
-    <%= simple_form_for :user, url: form_url, method: :post do |f| %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
       <div class="row">
@@ -46,13 +46,14 @@
           <%= f.label :last_name %><br />
           <%= f.text_field :last_name, autofocus: true, required: true, class: 'form-control', placeholder: 'Last Name' %>
         </div>
+        
 
         <div class="col-xs-12 col-md-6">
           <%= f.label :email %><br />
           <%= f.email_field :email, required: true, class: 'form-control', placeholder: 'Your email' %>
         </div>
 
-        <div class="col-xs-12 col-md-6">
+<!--         <div class="col-xs-12 col-md-6">
           <%= f.label :mobile_number %><br />
           <%= f.number_field :mobile_number, required: true, class: 'form-control', placeholder: 'Your Mobile Number' %>
         </div>
@@ -60,26 +61,33 @@
         <div class="col-xs-12 col-md-6">
           <%= f.label :facebook_handle %><br />
           <%= f.text_field :facebook_handle, autocomplete: "off", class: 'form-control', placeholder: 'john.smith' %>
-        </div>
+        </div> -->
 
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", required: true, class: 'form-control', placeholder: 'Your password' %>
-        </div>
+        <% if f.object.password_required? %>
 
-        <div class="col-xs-12 col-md-6">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: 'Confirm your password'  %>
-        </div>
+          <div class="col-xs-12 col-md-6">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "off", required: true, class: 'form-control', placeholder: 'Your password' %>
+          </div>
+
+          <div class="col-xs-12 col-md-6">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: 'Confirm your password'  %>
+          </div>
+
+        <% end %>
 
         <div class="col-xs-12">
           <%= f.label "Reasons for Applying" %><br />
           <%= f.text_area :application_reasons, class: 'form-control', placeholder: 'Please tell us about why you want to join TECHRISE and what you want to accomplish.', rows: "5" %>
         </div>
       </div>      
+
+      <%= f.input :uid, as: :hidden %>
+      <%= f.input :provider, as: :hidden %>
 
       <br>
 
