--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -26,7 +26,7 @@
         <section class="login-section access-section section">
             <div class="container">
                 <div class="row">
-                    <div class="form-box col-sm-12 col-xs-12 col-sm-offset-0 xs-offset-0">     
+                    <div class="form-box col-md-8 col-sm-12 col-xs-12 col-md-offset-2 col-sm-offset-0 xs-offset-0">
                         <div class="form-box-inner">
 
                           <%= render "shared/flash_messages" %>
