--- a/app/views/apply/_application_form.html.erb
+++ b/app/views/apply/_application_form.html.erb
@@ -34,7 +34,6 @@
 
   <div class="application-form">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
 
       <div class="row">
         <div class="col-xs-12 col-md-6">
@@ -46,7 +45,7 @@
           <%= f.label :last_name %><br />
           <%= f.text_field :last_name, autofocus: true, required: true, class: 'form-control', placeholder: 'Last Name' %>
         </div>
-        
+
 
         <div class="col-xs-12 col-md-6">
           <%= f.label :email %><br />
@@ -88,6 +87,7 @@
 
       <%= f.input :uid, as: :hidden %>
       <%= f.input :provider, as: :hidden %>
+      <%= f.input :package, as: :hidden, input_html: { value: package_value } %>
 
       <br>
 
