finally finished oauth tasks

--- a/app/views/apply/immersive_next_steps.html.erb
+++ b/app/views/apply/immersive_next_steps.html.erb
@@ -15,7 +15,11 @@
       </p>
 
       <p>
-        After the pre-work you will be called in for an interview.
+        After the pre-work assignments are all completed and approved, you will be called in for an interview.
+      </p>
+
+      <p>
+        In the meanwhile, <strong>please confirm your email address</strong>. A confirmation email has been sent to your email address.
       </p>
 
       <p>
