--- a/app/views/apply/remote_next_steps.html.erb
+++ b/app/views/apply/remote_next_steps.html.erb
@@ -22,6 +22,10 @@
       </p>
 
       <p>
+        In the meanwhile, <strong>please confirm your email address</strong>. A confirmation email has been sent to your email address.
+      </p>
+
+      <p>
         Looking forward to seeing you soon!<br>
         Sincerely,<br>
         <strong>TECHRISE Team</strong>
