--- a/app/views/static_pages/curriculum.html.erb
+++ b/app/views/static_pages/curriculum.html.erb
@@ -20,7 +20,7 @@
 
                 <div class="curriculum-cta text-center">
                     <h4 class="title" style="color:#333;">Want to experience the TECHRISE Curriculum?</h4>
-                    <p><%= link_to 'Sign Up to Gain Instant Access', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></p>
+                    <p><%= link_to 'Sign Up to Gain Instant Access', apply_path, class: 'btn btn-cta btn-cta-primary' %></p>
                 </div>
 
                 
@@ -48,7 +48,7 @@
              </div><!--//step-->
         </div><!--//row-->
         
-        <div class="text-center"><%= link_to 'Get Started with Your Web Development Career', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></div>
+        <div class="text-center"><%= link_to 'Get Started with Your Web Development Career', apply_path, class: 'btn btn-cta btn-cta-primary' %></div>
         
     </div><!--//container-->        
 </section><!--//steps-->
