--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -94,12 +94,17 @@
 
                 <% else %>                    
 
-                    <li class="nav-item page-scroll">
-                      <a href="/immersive">Immersive</a>
-                    </li>
-                    
-                    <li class="nav-item page-scroll">
-                      <a href="/remote">Remote</a>
+                    <li class="nav-item dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#">Programs <i class="fa fa-angle-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                              <a href="/immersive">Immersive</a>
+                            </li>
+
+                            <li>
+                              <a href="/remote">Remote</a>
+                            </li>   
+                        </ul>
                     </li>
 
                     <li class="nav-item page-scroll">
