add staging keys

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,11 +16,16 @@
                 </div><!--//foooter-col-->    
                 <div class="footer-col links col-sm-3 col-xs-12">
                     <div class="footer-col-inner">
-                        <h3 class="title">Curriculum</h3>
+                        <h3 class="title">Programs</h3>
                         <ul class="list-unstyled">
-                            <li><a href="/learn"><i class="fa fa-caret-right"></i>Learn More</a></li>
-                            <li><a href="/pricing"><i class="fa fa-caret-right"></i>Pricing</a></li>
-                            <li><a href="/users/sign_up"><i class="fa fa-caret-right"></i>Sign Up for Admission</a></li>
+                            <li><a href="/apply"><i class="fa fa-caret-right" aria-hidden="true"></i> Apply</a></li>
+                            <li>
+                              <a href="/immersive"><i class="fa fa-caret-right" aria-hidden="true"></i> TECHRISE Core Immersive</a>
+                            </li>
+
+                            <li>
+                              <a href="/remote"><i class="fa fa-caret-right" aria-hidden="true"></i> TECHRISE Core Remote</a>
+                            </li>                            
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//foooter-col-->              
@@ -31,7 +36,7 @@
                             <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
                             <li><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://www.twitter.com/techrisenepal"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/techrise"><i class="fa fa-linkedin"></i></a></li>
+                            <li class="row-end"><a href="https://www.linkedin.com/company/techrise"><i class="fa fa-linkedin"></i></a></li>
                             <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->        
                             <!-- <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li> -->             
                         </ul>
@@ -70,7 +75,7 @@
     </div><!--//footer-content-->
     <div class="bottom-bar">
         <div class="container">
-            <small class="copyright">Copyright @ 2016 TECHRISE</small>                
+            <small class="copyright">Copyright © 2016 TECHRISE</small>                
         </div><!--//container-->
     </div><!--//bottom-bar-->
 </footer><!--//footer-->
