--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -94,25 +94,25 @@
 
                 <% else %>                    
 
-                    <li class="nav-item dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#">Programs <i class="fa fa-angle-down"></i></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                              <a href="/immersive">Immersive</a>
-                            </li>
-
-                            <li>
-                              <a href="/remote">Remote</a>
-                            </li>   
-                        </ul>
-                    </li>
-
                     <li class="nav-item page-scroll">
                       <a href="/curriculum">Curriculum</a>
                     </li>
 
                     <li class="nav-item page-scroll">
                       <a href="/blog">Blog</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#">Programs <i class="fa fa-angle-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li>
+                              <a href="/immersive"><i class="fa fa-code" aria-hidden="true"></i> TECHRISE Core Immersive</a>
+                            </li>
+
+                            <li>
+                              <a href="/remote"><i class="fa fa-code" aria-hidden="true"></i> TECHRISE Core Remote</a>
+                            </li>   
+                        </ul>
                     </li>
 
                     <li class="nav-item dropdown">
