add devise links

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,12 @@
+.devise-shared {
+  text-align: left;
+  margin-top: 50px;
+  border-top: 1px solid #ddd;
+  padding-top: 30px;
+  font-family: 'Lato';
+  font-size: 14px;
+}
+
 .btn-social:hover {
   color: white !important;
 }
