--- a/app/views/ruby_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_5.html.erb
@@ -38,3 +38,5 @@
 
   <%= image_tag 'ruby_lessons/temperature/temp_passing_tests.png', class: 'img-responsive screenshot' %>
 </div>
+
+<% @submission_form = true %>
