--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -216,3 +216,103 @@
     </div><!-- payment-details -->
   </div><!-- container -->
 </section>
+
+<section class="explore-programs">
+  <div class="container">
+    <h3 class="text-center explore-programs-title">EXPLORE TECHRISE PROGRAMS</h3>
+    <h1 class="text-center explore-programs-subtitle">Choose the best program for you</h1>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">      
+        <div class="explore-program-box remote-box">
+          <div class="program-box-title">
+            <h4>TECHRISE Core Remote</h4>
+          </div><!-- program-box-title -->
+
+          <div class="program-box-highlights">
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <h3>4</h3>
+                <h5>Mentor Sessions</h5>
+              </div><!-- col-xs-12 col-md-6 -->
+
+              <div class="col-xs-12 col-md-6">
+                <h3>3,000 NPR</h3>
+                <h5>Tuition *</h5>
+              </div><!-- col-xs-12 col-md-6 -->
+            </div><!-- row -->
+          </div><!-- program-box-highlights -->
+
+          <div class="program-box-details">
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <ul>
+                  <li>1 Month of Training (Extendible)</li>
+                  <li>Learn Completely Online</li>
+                  <li>Learn at your own pace</li>                  
+                  <li>Access to Online Forum and Community</li>                  
+                </ul>
+              </div><!-- col-xs-12 col-md-6 -->
+
+              <div class="col-xs-12 col-md-6">
+                <ul>
+                  <li>Online Mentor Sessions</li>
+                  <li>Lifetime Access to Curriculum</li>
+                  <li>Build Real-World Web Applications</li>                  
+                </ul>
+              </div><!-- col-xs-12 col-md-6 -->
+
+              <div class="extra-info">
+                <small>* Does not include VAT fees</small>
+              </div>
+            </div><!-- row -->
+          </div><!-- program-box-details -->
+
+        </div><!-- program-box -->
+      </div><!-- col-xs-12 col-md-6 -->
+
+      <div class="col-xs-12 col-md-6">
+        <div class="explore-program-box">
+          <div class="program-box-title">
+            <h4>TECHRISE Core Immersive</h4>
+          </div><!-- program-box-title -->
+
+          <div class="program-box-highlights">
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <h3>16</h3>
+                <h5>Mentor Sessions</h5>
+              </div><!-- col-xs-12 col-md-6 -->
+
+              <div class="col-xs-12 col-md-6">
+                <h3>12,000 NPR</h3>
+                <h5>Tuition</h5>
+              </div><!-- col-xs-12 col-md-6 -->
+            </div><!-- row -->
+          </div><!-- program-box-highlights -->
+
+          <div class="program-box-details">
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <ul>
+                  <li>Access to Online Forum and Community</li>
+                  <li>Lifetime Access to Curriculum</li>
+                  <li>Guest speaker events, workshops and review sessions</li>                  
+                </ul>
+              </div><!-- col-xs-12 col-md-6 -->
+
+              <div class="col-xs-12 col-md-6">
+                <ul>
+                  <li>Opportunities to work on real web development projects</li>
+                  <li>Mentor sessions twice per week</li>
+                  <li>Build Real-World Web Applications</li>                 
+                </ul>
+              </div><!-- col-xs-12 col-md-6 -->
+            </div><!-- row -->
+          </div><!-- program-box-details -->
+
+        </div><!-- program-box -->
+      </div><!-- col-xs-12 col-md-6 -->
+    </div><!-- row -->
+  </div><!-- container -->
+</section>
